--- a/PackManager/PackManager-Info.plist
+++ b/PackManager/PackManager-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>UCLA.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>UCLA.PackManager</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
