--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,7 @@ Juggler.xcodeproj/xcuserdata/asanciangco.xcuserdatad/xcdebugger/Breakpoints_v2.x
 *.pbxproj
 *.xccheckout
 doc/*
-
+PackManager.xcodeproj/xcshareddata/xcschemes/PackManager.xcscheme
 
 
 
