--- a/.gitignore
+++ b/.gitignore
@@ -142,4 +142,4 @@ PackManager.xcodeproj/xcshareddata/xcschemes/PackManager.xcscheme
 
 
 
-PackManager.xcodeproj/project.pbxproj
+#PackManager.xcodeproj/project.pbxproj
